# simple_rwkv

./: .gitignore  Dockerfile  Makefile  README.md  compose.models.toml  docker-compose.yml  models.toml  pyproject.toml  requirements.txt
simple_rwkv/: __main__.py  get_models.py  lib_raven.py  model.py  ray_model.py  ray_server.py
simple_rwkv/conf/: simple_rwkv.yaml
simple_rwkv/conf/backend/: default.yaml
simple_rwkv/conf/model/: raven-1b-ctx4096.yaml  rwkv-4-pile-169m.yaml
simple_rwkv/simple_ai/: __init__.py  __main__.py
tests/: __init__.py  _rwkv.py  rayrwkv.py
